Your descriptive update message here

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_5jPAXeNYBZX8zMMvwndQ7b3ESbAF","orgId":"team_ne1yVLsRIOmZiyVa7m9c1mMX","projectName":"nurseryhub"}
+{"projectId":"prj_7uLOCeWjxoI2oNgPqypi2fWVNcfP","orgId":"team_ne1yVLsRIOmZiyVa7m9c1mMX","projectName":"smart.nursery.hub"}
